--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2cEL1cVN2gK0BcEXsUG4VFm9ujaGrAYPVPcN9oL0DBM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
